--- a/projectBlogTeo/appBlogTeo/templates/entradaCompleta.html
+++ b/projectBlogTeo/appBlogTeo/templates/entradaCompleta.html
@@ -2,8 +2,8 @@
 
 {%block content%}
 
-	<h1>{{ Entrada.titulo }}</h1>
-	<p> {{ Entrada.cuerpo }}</p>
-	<p> {{ Entrada.fecha }}</p>
+	<h1>{{ entrada.titulo }}</h1>
+	<p> {{ entrada.cuerpo }}</p>
+	<p> {{ entrada.fecha }}</p>
 
 {% endblock %}
