--- a/projectBlogTeo/appBlogTeo/templates/home.html
+++ b/projectBlogTeo/appBlogTeo/templates/home.html
@@ -5,7 +5,7 @@
 	{% if listadoEntradas %}
 		<ul>
 			{% for entrada in listadoEntradas %}
-				<li><h1><a href="{% url 'appBlogTeo:entradaCompleta' entrada.id %}">{{ entrada.titulo }}</a></h1></li>
+				<li><h1><a href="{% url 'appBlogTeo:VistaEntradaCompleta' entrada.id %}">{{ entrada.titulo }}</a></h1></li>
 				<p>{{entrada.cuerpo}}</p>
 				<p>{{entrada.fecha}}</p>
 			{% endfor %}
