--- a/projectBlogTeo/appBlogTeo/templates/home.html
+++ b/projectBlogTeo/appBlogTeo/templates/home.html
@@ -5,14 +5,26 @@
 	{% if listadoEntradas %}
 		<ul>
 			{% for entrada in listadoEntradas %}
-				<li><h1><a href="{% url 'appBlogTeo:VistaEntradaCompleta' entrada.id %}">{{ entrada.titulo }}</a></h1></li>
+				<li><h2><a href="{% url 'appBlogTeo:VistaEntradaCompleta' entrada.id %}">
+				   {{ entrada.titulo }}</a></h1></li>
 				<p>{{entrada.cuerpo}}</p>
-				<p>{{entrada.fecha}}</p>
+				<time>{{entrada.fecha}}</time>
 			{% endfor %}
 		</ul>
 	{% else %}
 		<h1>Sin entradas</h1>
 		<p>La base de datos por el momento no tiene entradas. Por favor, introduzca al menos una para poder contemplarla</p>
 	{% endif %}
+
+{% endblock %}
+
+
+{% block paginator %}
+	{% if entrada.has_previous %}
+		<a href="?page={{ entrada.previous_page_number }}">Página anterior</a>
+	{% else %}
+		<a href="?page={{ entrada.next_page_number }}">Página siguiente</a>
+	{% endif %}
+		<p>Página {{entrada.number}} de {{entrada.num_pages}}</p
 
 {% endblock %}
