--- a/projectBlogTeo/appBlogTeo/templates/base.html
+++ b/projectBlogTeo/appBlogTeo/templates/base.html
@@ -1,26 +1,62 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="es">
 <head>
-	<title>Blog de Teo</title>
 	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+
+	<title>Blog de Teo</title>
 </head>
 <body>
 	<!-- Para los mensajes de logout -->
 	{% include '_mensajes.html' %}
-	{% block content %}{% endblock content %}
+	{% block mensajes %}{% endblock mensajes %}
 
-	<article>
-		<h1>Blog de Teo</h1>
-		{% block content %}
-		{% endblock %}		
-	</article>
-	<nav>
-		{% block paginator %}
-		{% endblock %}
-	</nav>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Blog de Teo</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+	<div class="container">
+		
+		<div class="starter-template"></div>
+			{% block content %}
+			{% endblock %}	
+
+			{% block paginator %}
+			{% endblock %}
+	
+		</div>
+
+	</div> <!-- /.container -->
 
 </body>
 <footer>
-	(c) 2016 Teófilo Rojas Mata
+	<div class="firma">
+		(c) 2016 Teófilo Rojas Mata
+	</div>
 </footer>
 </html>
