--- a/projectBlogTeo/appBlogTeo/templates/_mensajes.html
+++ b/projectBlogTeo/appBlogTeo/templates/_mensajes.html
@@ -1,13 +1,13 @@
-{% if mensajes %}
-    <div class="row dj-mensajes">
+{% if messages %}
+    <div class="row dj-messages">
         <div class="col-md-6 col-md-offset-3">
-            {% for mensaje in mensajes %}
-                {% if mensaje.tags == 'error' %}
+            {% for message in messages %}
+                {% if message.tags == 'error' %}
                 <div class="alert alert-danger" role="alert">
                 {% else %}
-                <div class="alert alert-{{ mensaje.tags }}" role="alert">
+                <div class="alert alert-{{ message.tags }}" role="alert">
                 {% endif %}
-                    {{ mensaje }}<button type="button" class="close" data-dismiss="alert">&times;</button>
+                    {{ message }}<button type="button" class="close" data-dismiss="alert">&times;</button>
                 </div>
             {% endfor %}
         </div>
