--- a/projectBlogTeo/appBlogTeo/templates/home.html
+++ b/projectBlogTeo/appBlogTeo/templates/home.html
@@ -8,7 +8,7 @@
 				<li><h2><a href="{% url 'appBlogTeo:VistaEntradaCompleta' entrada.id %}">
 				   {{ entrada.titulo }}</a></h1></li>
 				<p>{{entrada.cuerpo}}</p>
-				<time>{{entrada.fecha}}</time>
+				<small>{{entrada.fecha}}</small>
 			{% endfor %}
 		</ul>
 	{% else %}
