--- a/projectBlogTeo/appBlogTeo/templates/base.html
+++ b/projectBlogTeo/appBlogTeo/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
+    <script src="{% static 'jquery/jquery.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
 
@@ -65,6 +66,8 @@
 				</div>
 				<div class="col-md-3">
 					<p>Para Menú Vertical</p>
+          {% block lateral%}
+          {% endblock lateral%}
 				</div>
 			</div> <!-- /.row-->
 		</div>
