OK Editar Password

--- a/projectBlogTeo/cuentasUsuario/templates/menuLateral.html
+++ b/projectBlogTeo/cuentasUsuario/templates/menuLateral.html
@@ -6,7 +6,7 @@
             <div class="list-group">
                 <a href="{% url 'cuentasUsuario.editar_email' %}" class="list-group-item">Editar email</a>
 
-                <a href="#" class="list-group-item">Editar contraseña</a>
+                <a href="{% url 'cuentasUsuario.editar_contrasena' %}" class="list-group-item">Editar contraseña</a>
             </div>
         </div>
         <div class="col-md-10">
