--- a/projectBlogTeo/appBlogTeo/templates/base.html
+++ b/projectBlogTeo/appBlogTeo/templates/base.html
@@ -25,12 +25,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Blog de Teo</a>
+          <a class="navbar-brand" href="{% url 'home:home' %}">Blog de Teo</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="{% url 'acerca' %}">Acerca</a></li>
+            <li class="active"><a href="{% url 'home:home' %}">Home</a></li>
+            <li><a href="{% url 'home:acerca' %}">Acerca</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
 
