--- a/projectBlogTeo/appBlogTeo/templates/acerca.html
+++ b/projectBlogTeo/appBlogTeo/templates/acerca.html
@@ -2,4 +2,6 @@
 
 {% block content %}
     <h2 class="page-header">Sobre mí</h2>
+    <p>Skywalker kashyyyk moff darth solo darth coruscant. Lando moff mon maul hutt organa. Skywalker antilles moff wicket mon skywalker jawa anakin yavin. Hutt yoda watto mara moff. Padmé tatooine darth jade thrawn darth. Jade c-3p0 gamorrean hutt moff wampa leia. Moff kenobi hutt zabrak skywalker gamorrean darth windu. <br>
+    Wicket yoda c-3po kessel. Dooku lobot jango padmé ewok dagobah dooku. Jango ponda jawa jinn. Coruscant hutt grievous tatooine antilles anakin yoda. Organa yoda skywalker yoda jinn vader.</p>
 {% endblock content %}
