--- a/projectBlogTeo/appBlogTeo/templates/base.html
+++ b/projectBlogTeo/appBlogTeo/templates/base.html
@@ -29,9 +29,13 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'home:home' %}">Home</a></li>
-            <li><a href="{% url 'home:acerca' %}">Acerca</a></li>
-            <li><a href="#contact">Contact</a></li>
+            {% url 'home:home' as home_url %}
+            {% url 'home:acerca' as acerca_url %}
+            {% url 'home:contacto' as contacto_url %}
+
+            <li {% if request.get_full_path == home_url %} class="active" {% endif %}><a href="{% url 'home:home' %}">Home</a></li>
+            <li {% if request.get_full_path == acerca_url %} class="active" {% endif %}><a href="{% url 'home:acerca' %}">Acerca</a></li>
+            <li><a href="{% url 'home:contacto' %}">Contacto</a></li>
           </ul>
 
           <!-- Parte derecha dedicada a los usuarios -->
