--- a/projectBlogTeo/appBlogTeo/templates/entradaCompleta.html
+++ b/projectBlogTeo/appBlogTeo/templates/entradaCompleta.html
@@ -4,7 +4,7 @@
 
 	<h1>{{ entrada.titulo }}</h1>
 	<p> {{ entrada.cuerpo }}</p>
-	<p> {{ entrada.fecha }}</p>
+	<div class="fecha"> {{ entrada.fecha }}</div>
 
 {% endblock %}
 
