OK reverse de EntradaCrearVista

--- a/projectBlogTeo/appBlogTeo/templates/base.html
+++ b/projectBlogTeo/appBlogTeo/templates/base.html
@@ -39,7 +39,7 @@
             <li {% if request.get_full_path == acerca_url %} class="active" {% endif %}><a href="{% url 'home:acerca' %}">Acerca</a></li>
             <li {% if request.get_full_path == contacto_url %} class="active" {% endif %}><a href="{% url 'home:contacto' %}">Contacto</a></li>
             {% if perms.entrada.can_add %}
-              <li><a href="{% url 'home:crear' %}">Crear artículo</a></li>
+              <li {% if request.get_full_path == crear_url %} class="active" {% endif %}><a href="{% url 'home:crear' %}">Crear artículo</a></li>
             {% endif %}
           </ul>
 
