--- a/projectBlogTeo/appBlogTeo/templates/base.html
+++ b/projectBlogTeo/appBlogTeo/templates/base.html
@@ -33,7 +33,8 @@
             {% url 'home:acerca' as acerca_url %}
             {% url 'home:contacto' as contacto_url %}
             {% url 'home:crear' as crear_url %}
-
+            {% url 'home:editar' as editar_url %}
+            {% url 'home:VistaEntradaCompleta' as vistaDetalle_url %}
 
             <li {% if request.get_full_path == home_url %} class="active" {% endif %}><a href="{% url 'home:home' %}">Home</a></li>
             <li {% if request.get_full_path == acerca_url %} class="active" {% endif %}><a href="{% url 'home:acerca' %}">Acerca</a></li>
@@ -66,6 +67,8 @@
           <!-- Para los mensajes de logout -->
           {% include '_mensajes.html' %}
 
+{% if request.get_full_path == vistaDetalle_url %}<p>VISTA ENTRADA DETALLE!!!</p>{% endif %}
+
           <!-- Para la lista de entradas -->
 					{% block content %}
 					{% endblock %}
@@ -88,7 +91,8 @@
 <footer>
   <div class="container">
     <div class="row" style="padding: 20px 0;">
-      <div class="col-md-3">
+      <div class="col-md-4">
+ 
         <h4>Manuales seguidos</h4>
         <ul>
           <li><a href="https://docs.djangoproject.com/es/1.10/intro/tutorial01/">DjangoProject</a></li>
@@ -97,6 +101,25 @@
           <li><a href="https://github.com/saul-g/El-libro-de-Django/blob/master/Libros/libro_django1.8.pdf">Saúl DjangoGuía</a> </li>
         </ul>          
       </div>
+
+      <div class="col-md-4">
+        <h4>Software Necesario</h4>
+        <ul>
+          <li><a href="https://www.djangoproject.com/download/1.10/tarball/">Django 1.10</a></li>
+          <li><a href="https://www.djangoproject.com/download/">Manual Instalación</a></li>
+          <li><a href="https://www.python.org/downloads/">Python 2.7</a></li>
+        </ul>          
+      </div>
+
+      <div class="col-md-4">
+        <h4>Github</h4>
+        <ul>
+          <li><a href="https://github.com/Reshait/ps_ProgramacionWeb">Github Repo</a></li>
+          <li class="naranja">SuperUsuarioAdmin: admin
+          <li class="naranja">Contraseña: admin
+        </ul>          
+      </div>
+
     </div>
   </div><!-- /.container -->
   <div class="firma">
